@@ -38,6 +38,7 @@
     avoid conflicts with any system installed font.
 29. Remove custom icon theme, and just use FontAwesome.
 30. Show technical info to the left of ratings.
+31. Embed FontAwesome into Cantata.
 
 2.3.0
 -----
